--- a/styles.css
+++ b/styles.css
@@ -74,9 +74,11 @@ figure {
 }
 
 figcaption {
-  margin-bottom: 0.5em; /* Space below caption */
   font-size: 0.9em;
+  font-weight: normal;
   color: #555;
+  margin: 0.5em 0;
+  line-height: 1.4;
 }
 /* =================== */
 
