--- a/styles.css
+++ b/styles.css
@@ -74,9 +74,9 @@ figure {
 }
 
 figcaption {
-  font-size: 0.9em;
-  font-weight: normal;
-  color: #555;
+  font-size: 1.1em;
+  font-weight: bold;
+  color: #003366;
   margin: 0.5em 0;
   line-height: 1.4;
 }
